--- a/typing_test/templates/home.html
+++ b/typing_test/templates/home.html
@@ -11,7 +11,8 @@
 <body>
     <div class="container">
         <h1>Typing Speed Test</h1>
-        <p id="text-to-type">{{ initial_text }}</p>
+        <p>Start typing the text shown below as quickly and accurately as you can.</p>
+        <div id="text-to-type">{{ initial_text }}</div>
         <textarea id="input-text" placeholder="Start typing..."></textarea>
         <button id="change-text-button">Change Text</button>
         <p id="typing-speed">Typing Speed: 0 WPM</p>
